[package]
name = "csv-transaction-parser"
version = "0.1.0"
edition = "2021"
authors = ["Žiga Pregelj"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"]}
csv = "1.1.6"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"